@startuml

title __USER's Class Diagram__\n

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace user {
        class com.pis.buy2gether.usecases.home.user.UserFragment {
            + onClick()
            + onCreateView()
            + onDestroyView()
            - setOnClickListeners()
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace user {
        class com.pis.buy2gether.usecases.home.user.UserViewModel {
            ~ description : TextView
            ~ img_pfp : ShapeableImageView
            ~ username : TextView
            - context : Context
            + setup()
            ~ UserViewModel()
            - setUserPfp()
            - setupUserInfo()
        }
      }
    }
  }
  

  com.pis.buy2gether.usecases.home.user.UserFragment .up.|> android.view.View.OnClickListener
  com.pis.buy2gether.usecases.home.user.UserFragment -up-|> androidx.fragment.app.Fragment
  com.pis.buy2gether.usecases.home.user.UserFragment o-- com.pis.buy2gether.databinding.FragmentUserBinding : binding
  com.pis.buy2gether.usecases.home.user.UserFragment o-- com.pis.buy2gether.usecases.home.user.UserViewModel : viewModel
  com.pis.buy2gether.usecases.home.user.UserViewModel -up-|> androidx.lifecycle.ViewModel
  com.pis.buy2gether.usecases.home.user.UserViewModel o-- com.pis.buy2gether.model.session.Session : session


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
